2000-04-12  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10685: Doc/Zsh/zle.yo, Src/hist.c, Src/Modules/parameter.c,
 	Src/Zle/iwidgets.list, Src/Zle/zle_misc.c: new widget
 	copy-prev-shell-word, like copy-prev-word but uses shell parsing
 	to find word
	
2000-04-11  Clint Adams  <schizo@debian.org>

	* 10680: Completion/User/_diff_options: spelling corrections.

2000-04-11  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10669: Completion/Core/compinstall:  will now ask for
	alternative files both for input and output.

2000-04-11  Bart Schaefer  <schaefer@zsh.org>

	* 10681: Completion/Commands/_complete_help: Setopts the same
	as _main_complete.

	* 10657: Completion/User/_make: One change missed in 10635.

	* Functions/Prompts/prompt_bart_setup: No-op cleanup.

2000-04-11  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10650: Completion/Core/_files: make trailing blanks in
 	file-patterns tags be removed
	
	* 10648: Completion/Core/_oldlist: make _oldlist ignore old list
 	when _complete_help is used
	
	* 10641: Completion/Core/_approximate, Completion/Core/_match,
 	Completion/Core/_oldlist: make _oldlist ignore list from
 	_complete_help; _match runs for every match spec from
 	matcher-list; _approximate doesn't redefine compadd if that is
 	already a function
	
	* 10635: Completion/User/_make: _make uses $words[1] for command
 	name
	
	* 10632: Completion/Base/_brace_parameter, Completion/Base/_condition,
 	Completion/Base/_default, Completion/Base/_describe,
 	Completion/Base/_first, Completion/Base/_jobs,
 	Completion/Base/_values, Completion/Builtins/_compdef,
 	Completion/Builtins/_hash, Completion/Builtins/_pids,
 	Completion/Builtins/_popd, Completion/Builtins/_sched,
 	Completion/Builtins/_signals, Completion/Builtins/_vars,
 	Completion/Builtins/_zcompile, Completion/Builtins/_zftp,
 	Completion/Builtins/_zpty, Completion/Builtins/_zstyle,
 	Completion/Commands/_next_tags, Completion/Core/_all_labels,